upload file style.css

--- a/desafios/exemplo01/ex01.html
+++ b/desafios/exemplo01/ex01.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exemplo CSS</title>
+    <link rel="stylesheet" href="style.css"
+</head>
+<body>
+    <main>  
+        <h1> Site de Exemplo</h1>
+        <h2> Título 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rerum, laudantium, consequuntur in corporis suscipit dolor perspiciatis atque illo laborum libero repellat, optio esse doloremque ipsa deleniti officia? Laudantium, facilis.
+        </p>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta expedita quis obcaecati molestias, pariatur commodi! Inventore labore nulla culpa neque! At ipsa praesentium optio laudantium dolores quis dolorum consequuntur sint.
+        </p>
+        <h2> Título 2</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate consequatur velit possimus assumenda alias quos saepe, maiores placeat quisquam perferendis enim! Unde minima, explicabo nobis omnis suscipit perspiciatis dolorum asperiores!
+        </p>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ea ipsam commodi enim obcaecati, porro accusamus eligendi quo. Aspernatur sed vitae nostrum iste, vel commodi eaque in blanditiis maxime libero.    
+        </p>
+        <h2> Título 3</h2>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis saepe culpa exercitationem labore, quia, error minima nesciunt, amet aperiam praesentium veritatis consectetur quisquam nam quaerat optio aspernatur debitis doloribus rem!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam harum, quisquam nemo necessitatibus vero voluptatem, suscipit praesentium earum tempora blanditiis voluptas ratione adipisci laborum non recusandae dicta iste eum. Quod!
+        </p>   
+    </main>
+    
+    
+</body>
+</html>
